# Multiscale-Statistical-Analysis

./: .gitignore  CanvasPanel.py  CurveFit.py  Dialogs.py  GraphDialogs.py  LICENSE  MANIFEST.in  PlotData.py  README.md  StatsTestsUI.py  Workbook.py  build_config.spec  main.py  requirements.txt  sample1.txt  setup.cfg  setup.py  ssfa-template.mnt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md
resources/: ssfa-template.mnt
samples/: sample2.txt  sample3.txt  sample4.txt
src/multi_stat_analysis/: CanvasPanel.py  CurveFit.py  Dialogs.py  MultiscaleData.py  MultiscaleImporter.py  PlotData.py  StatsTestsUI.py  Workbook.py  _Resources.py  __main__.py  main.py
src/multi_stat_analysis/MountainsImporter/: ImportUtils.py  Importer.py
src/multiscale-stat-analysis/: PlotData.py
