[metadata]
name = multiscale-statistical-analysis
version = 0.4.1
license = MIT
description = Multiscale regression analysis software, which uses multiscale area data exported from MountainsMap®.
long_description = file: README.md
author = Matthew Spofford, Nathaniel Rutkowski
author_email = mespofford@wpi.edu
classifiers=
   Development Status :: 4 - Beta
   Programming Language :: Python :: 3 :: Only
   Framework :: Setuptools Plugin
   Framework :: Matplotlib
   Environment :: Win32 (MS Windows)
   License :: OSI Approved :: MIT License
   Topic :: Scientific/Engineering
   Natural Language :: English

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy==1.18.5
   wxPython==4.1.0
   scipy==1.5.0
   matplotlib==3.2.2
   openpyxl==3.0.3
   aenum==2.2.3

[options.packages.find]
where=src